--- a/Python/DataCleaning.ipynb
+++ b/Python/DataCleaning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\"> Prepared by Hui Xiang Chua for   \n",
+    "<div style=\"text-align: right\"> Prepared by Srikanth for   \n",
     "<a href=\"https://ep2020.europython.eu/talks/CivrR5y-top-15-python-tips-for-data-cleaning-understanding/\">EuroPython 2020</a> </div>"
    ]
   },
